# community

./: .gitignore  README.md  bracket_check.js  closing_braces.txt  fix_app.js  package-lock.json  package.json  test_x.html
.cursor/rules/: my-rules.mdc
backend/: .env.example  .pylintrc  README.md  app.py  cursor_forum_api.py  cursor_forum_db.py  llm_classifier.py  pyproject.toml  requirements.txt  run.sh  sample_data.py  scraper.py  simple_app.py  test.html  test_openai.py  test_server.py  twitter_api.py  twitter_db.py  update_schema.py  update_schema_classifications.py
backend/analysis_results/: competitive_report.json
backend/models/: discourse_post.py  twitter_post.py
backend/site_packages_links/: flask  flask_cors  praw  prawcore  requests  sqlalchemy
public/: index.html  manifest.json
src/: App.css  App.js  App.js.backup3  App.js.bak4  App.jsx  index.css
src/app/: useAppState.js  useDerivedData.js  useSortingFunctions.js  useUIInteractions.js
src/components/: CardDetail.css  CardDetail.js  CursorForumCard.css  CursorForumCard.js  ErrorMessage.css  ErrorMessage.js  FilterBar.css  FilterBar.js  FilterPanel.css  FilterPanel.js  Header.css  Header.js  ModalFix.js  ModalTest.js  Navbar.css  Navbar.js  NestedFilterPanel.css  NestedFilterPanel.js  PostCard.css  PostCard.js  PostList.css  PostList.js  SubCategoryFilter.css  SubCategoryFilter.js  ThemeSwitcher.css  ThemeSwitcher.js  TwitterCard.css  TwitterCard.js  TwitterFeed.js
src/components/ui/: avatar.css  avatar.js  badge.css  badge.js  button.css  button.js  card.css  (+9 more)
src/utils/: errorHandling.js
